--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.7.2",
     "@astrojs/mdx": "^0.13.0",
     "@astrojs/rss": "^1.2.1",
-    "@astrojs/sitemap": "^1.0.0"
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/solid-js": "^1.2.3",
+    "@astrojs/tailwind": "^2.1.3",
+    "@motionone/solid": "^10.15.4",
+    "@solid-primitives/keyed": "^1.1.4",
+    "astro": "^1.7.2",
+    "motion": "^10.15.3",
+    "solid-js": "^1.4.3",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
